# stapler-templater

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/copilot/: commit-message-generation.md  copilot-instructions.md
src/: args.py  config.py  main.py
src/processor/: read_content.py  recipe_variables.py  run_recipe.py  runner.py  templater.py
src/processor/parser/: dsv_parser.py  json_parser.py  textfsm_parser.py  xml_parser.py  yaml_parser.py
src/utilities/: resolve_path.py
tests/: test_args.py  test_config.py  test_main.py
tests/data/: config.yaml  expected_fsm_output.txt  fsm_input.txt  input.txt  output.txt  test.textfsm  testfile.txt
tests/data/templates/: fsm.j2  test.j2
tests/data/textfsm/: fsm_template.textfsm
tests/processor/: test_read_content.py  test_recipe_variables.py  test_run_recipe.py  test_runner.py  test_templater.py
tests/processor/parser/: test_parsers.py
