[project]
name = "stapler-templater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.14",
    "textfsm>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
